service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec: 
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30010
apiVersion: v2
kind: Service
metadata:
  name: myservice
spec: 
  type: NodePort
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30020
