Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: onlineshopping.com
      http:
        paths:
          - path: /officeaddress
            pathType: Prefix
            backend:
              service:
                name: app1-clustreip-service
              port:
                number: 3080
